Pass kernel-module flag only if pf_ring enabled (#1480)

--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -56,8 +56,9 @@ spec:
           {{- end }}
             - -procfs
             - /hostproc
-            # TODO: remove
-            - -no-kernel-module
+          {{- if .Values.tap.kernelModule.enabled }}
+            - -kernel-module
+          {{- end }}
           {{- if .Values.tap.debug }}
             - -debug
           {{- end }}
