--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -350,6 +350,8 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          - name: TCP_STREAM_CHANNEL_TIMEOUT_MS
+            value: '10000'
           resources:
             limits:
               cpu: 750m
