--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -4,10 +4,10 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-service-account
@@ -21,10 +21,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
 stringData:
     LICENSE: ''
@@ -37,10 +37,10 @@ metadata:
   name: kubeshark-nginx-config-map
   namespace: default
   labels:
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
 data:
   default.conf: |
@@ -86,10 +86,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
 data:
     POD_REGEX: '.*'
@@ -101,7 +101,7 @@ data:
     AUTH_APPROVED_TENANTS: ''
     TELEMETRY_DISABLED: ''
     REPLAY_DISABLED: ''
-    GLOBAL_FILTER: ''
+    GLOBAL_FILTER: ""
     TRAFFIC_SAMPLE_RATE: '100'
 ---
 # Source: kubeshark/templates/02-cluster-role.yaml
@@ -109,10 +109,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-cluster-role
@@ -137,10 +137,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-cluster-role-binding
@@ -159,10 +159,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-self-config-role
@@ -181,16 +181,17 @@ rules:
       - get
       - watch
       - update
+      - patch
 ---
 # Source: kubeshark/templates/03-cluster-role-binding.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-self-config-role-binding
@@ -210,10 +211,10 @@ kind: Service
 metadata:
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-hub
@@ -232,10 +233,10 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-front
@@ -261,10 +262,10 @@ metadata:
 spec:
   selector:
     app.kubeshark.co/app: worker
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   ports:
   - name: metrics
@@ -279,10 +280,10 @@ metadata:
   labels:
     app.kubeshark.co/app: worker
     sidecar.istio.io/inject: "false"
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-worker-daemon-set
@@ -291,19 +292,19 @@ spec:
   selector:
     matchLabels:
       app.kubeshark.co/app: worker
-      helm.sh/chart: kubeshark-52.0.0
+      helm.sh/chart: kubeshark-52.1.0
       app.kubernetes.io/name: kubeshark
       app.kubernetes.io/instance: kubeshark
-      app.kubernetes.io/version: "52.0.0"
+      app.kubernetes.io/version: "52.1.0"
       app.kubernetes.io/managed-by: Helm
   template:
     metadata:
       labels:
         app.kubeshark.co/app: worker
-        helm.sh/chart: kubeshark-52.0.0
+        helm.sh/chart: kubeshark-52.1.0
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.0.0"
+        app.kubernetes.io/version: "52.1.0"
         app.kubernetes.io/managed-by: Helm
       name: kubeshark-worker-daemon-set
       namespace: kubeshark
@@ -334,7 +335,7 @@ spec:
             - -procfs
             - /hostproc
             - -kernel-module
-          image: 'docker.io/kubeshark/worker:v52.0.0'
+          image: 'docker.io/kubeshark/worker:v52.1.0'
           imagePullPolicy: Always
           name: sniffer
           ports:
@@ -397,7 +398,7 @@ spec:
             - ./tracer
             - -procfs
             - /hostproc
-          image: 'docker.io/kubeshark/worker:v52.0.0'
+          image: 'docker.io/kubeshark/worker:v52.1.0'
           imagePullPolicy: Always
           name: tracer
           env:
@@ -472,10 +473,10 @@ kind: Deployment
 metadata:
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-hub
@@ -485,19 +486,19 @@ spec:
   selector:
     matchLabels:
       app.kubeshark.co/app: hub
-      helm.sh/chart: kubeshark-52.0.0
+      helm.sh/chart: kubeshark-52.1.0
       app.kubernetes.io/name: kubeshark
       app.kubernetes.io/instance: kubeshark
-      app.kubernetes.io/version: "52.0.0"
+      app.kubernetes.io/version: "52.1.0"
       app.kubernetes.io/managed-by: Helm
   template:
     metadata:
       labels:
         app.kubeshark.co/app: hub
-        helm.sh/chart: kubeshark-52.0.0
+        helm.sh/chart: kubeshark-52.1.0
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.0.0"
+        app.kubernetes.io/version: "52.1.0"
         app.kubernetes.io/managed-by: Helm
     spec:
       dnsPolicy: ClusterFirstWithHostNet
@@ -515,7 +516,7 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          image: 'docker.io/kubeshark/hub:v52.0.0'
+          image: 'docker.io/kubeshark/hub:v52.1.0'
           imagePullPolicy: Always
           readinessProbe:
             periodSeconds: 1
@@ -545,10 +546,10 @@ kind: Deployment
 metadata:
   labels:
     app.kubeshark.co/app: front
-    helm.sh/chart: kubeshark-52.0.0
+    helm.sh/chart: kubeshark-52.1.0
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.0.0"
+    app.kubernetes.io/version: "52.1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-front
@@ -558,19 +559,19 @@ spec:
   selector:
     matchLabels:
       app.kubeshark.co/app: front
-      helm.sh/chart: kubeshark-52.0.0
+      helm.sh/chart: kubeshark-52.1.0
       app.kubernetes.io/name: kubeshark
       app.kubernetes.io/instance: kubeshark
-      app.kubernetes.io/version: "52.0.0"
+      app.kubernetes.io/version: "52.1.0"
       app.kubernetes.io/managed-by: Helm
   template:
     metadata:
       labels:
         app.kubeshark.co/app: front
-        helm.sh/chart: kubeshark-52.0.0
+        helm.sh/chart: kubeshark-52.1.0
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.0.0"
+        app.kubernetes.io/version: "52.1.0"
         app.kubernetes.io/managed-by: Helm
     spec:
       containers:
@@ -581,7 +582,7 @@ spec:
               value: 'false'
             - name: REACT_APP_REPLAY_DISABLED
               value: 'false'
-          image: 'docker.io/kubeshark/front:v52.0.0'
+          image: 'docker.io/kubeshark/front:v52.1.0'
           imagePullPolicy: Always
           name: kubeshark-front
           livenessProbe:
