:hammer: Add `AUTH_SAML_ROLES` field to `ConfigMap`

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -67,6 +67,13 @@ tap:
       idpMetadataUrl: ""
       x509crt: ""
       x509key: ""
+      roles:
+        admin:
+          filter: ""
+          canReplayTraffic: true
+          canDownloadPCAP: true
+          canUseScripting: true
+          canUpdateTargetedPods: true
   ingress:
     enabled: false
     className: ""
