--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -80,6 +80,11 @@ spec:
                 fieldPath: metadata.namespace
           - name: TCP_STREAM_CHANNEL_TIMEOUT_MS
             value: '{{ .Values.tap.tcpStreamChannelTimeoutMs }}'
+          - name: KUBESHARK_CLOUD_API_URL
+            valueFrom:
+              configMapKeyRef:
+                name: kubeshark-config-map
+                key: KUBESHARK_CLOUD_API_URL
           resources:
             limits:
               cpu: {{ .Values.tap.resources.sniffer.limits.cpu }}
