:sparkles: Add `MiscConfig` struct with has `JsonTTL` and `PcapTTL` fields

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -112,6 +112,9 @@ tap:
     port: 49100
   trafficSampleRate: 100
   tcpStreamChannelTimeoutMs: 10000
+  misc:
+    jsonTTL: 5m
+    pcapTTL: 10s
 logs:
   file: ""
 kube:
