--- a/helm-chart/templates/12-config-map.yaml
+++ b/helm-chart/templates/12-config-map.yaml
@@ -26,4 +26,5 @@ data:
     GLOBAL_FILTER: {{ include "kubeshark.escapeDoubleQuotes" .Values.tap.globalFilter | quote }}
     TRAFFIC_SAMPLE_RATE: '{{ .Values.tap.trafficSampleRate }}'
     KUBESHARK_CLOUD_API_URL: 'https://api.kubeshark.co'
-    
+    CONFIG_JSON_TTL: '{{ .Values.tap.misc.jsonTTL }}'
+    CONFIG_PCAP_TTL: '{{ .Values.tap.misc.pcapTTL }}'
