✨ Set custom timezone (#1517)
* 🔨 Add timezone config

* 🔨 Update `complete.yaml`

* 📝 Document `timezone` config

* 📝 Update `timezone` config docs

* 📝 Update `timezone` config docs

* 🔥 Remove unused `TIMEZONE` field from `ConfigMap`

* 🦺 Handle empty `tap.timezone` case

* 🔨 Move `timezone` from `.Values.tap` to `.Values`

* 🔨 Add `timezone` field to helm values

* 🔨 Update `complete.yaml`

* 📝 Update `timezone` config docs

* 🔨 Add `TIMEZONE` field to `ConfigMap`

---------

Co-authored-by: Alon Girmonsky <1990761+alongir@users.noreply.github.com>

--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -727,6 +727,8 @@ spec:
               value: 'saml'
             - name: REACT_APP_AUTH_SAML_IDP_METADATA_URL
               value: ' '
+            - name: REACT_APP_TIMEZONE
+              value: ' '
             - name: REACT_APP_REPLAY_DISABLED
               value: 'false'
             - name: REACT_APP_SCRIPTING_DISABLED
