:bookmark: Bump the Helm chart version to 52.1.77

--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -66,10 +66,10 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-service-account
@@ -83,10 +83,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
 stringData:
     LICENSE: ''
@@ -100,10 +100,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
 stringData:
   AUTH_SAML_X509_CRT: |
@@ -116,10 +116,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
 stringData:
   AUTH_SAML_X509_KEY: |
@@ -131,10 +131,10 @@ metadata:
   name: kubeshark-nginx-config-map
   namespace: default
   labels:
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
 data:
   default.conf: |
@@ -195,10 +195,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
 data:
     POD_REGEX: '.*'
@@ -222,16 +222,17 @@ data:
     JSON_TTL: '5m'
     PCAP_TTL: '10s'
     PCAP_ERROR_TTL: '60s'
+    TIMEZONE: ' '
 ---
 # Source: kubeshark/templates/02-cluster-role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-cluster-role-default
@@ -256,10 +257,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-cluster-role-binding-default
@@ -278,10 +279,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-self-config-role
@@ -307,10 +308,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-self-config-role-binding
@@ -330,10 +331,10 @@ kind: Service
 metadata:
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-hub
@@ -352,10 +353,10 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-front
@@ -381,10 +382,10 @@ metadata:
 spec:
   selector:
     app.kubeshark.co/app: worker
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   ports:
   - name: metrics
@@ -399,10 +400,10 @@ metadata:
   labels:
     app.kubeshark.co/app: worker
     sidecar.istio.io/inject: "false"
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-worker-daemon-set
@@ -411,19 +412,19 @@ spec:
   selector:
     matchLabels:
       app.kubeshark.co/app: worker
-      helm.sh/chart: kubeshark-52.1.75
+      helm.sh/chart: kubeshark-52.1.77
       app.kubernetes.io/name: kubeshark
       app.kubernetes.io/instance: kubeshark
-      app.kubernetes.io/version: "52.1.75"
+      app.kubernetes.io/version: "52.1.77"
       app.kubernetes.io/managed-by: Helm
   template:
     metadata:
       labels:
         app.kubeshark.co/app: worker
-        helm.sh/chart: kubeshark-52.1.75
+        helm.sh/chart: kubeshark-52.1.77
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.1.75"
+        app.kubernetes.io/version: "52.1.77"
         app.kubernetes.io/managed-by: Helm
       name: kubeshark-worker-daemon-set
       namespace: kubeshark
@@ -455,7 +456,7 @@ spec:
             - -procfs
             - /hostproc
             - -kernel-module
-          image: 'docker.io/kubeshark/worker:v52.1.75'
+          image: 'docker.io/kubeshark/worker:v52.1.77'
           imagePullPolicy: Always
           name: sniffer
           ports:
@@ -519,7 +520,7 @@ spec:
             - ./tracer
             - -procfs
             - /hostproc
-          image: 'docker.io/kubeshark/worker:v52.1.75'
+          image: 'docker.io/kubeshark/worker:v52.1.77'
           imagePullPolicy: Always
           name: tracer
           env:
@@ -594,10 +595,10 @@ kind: Deployment
 metadata:
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-hub
@@ -607,19 +608,19 @@ spec:
   selector:
     matchLabels:
       app.kubeshark.co/app: hub
-      helm.sh/chart: kubeshark-52.1.75
+      helm.sh/chart: kubeshark-52.1.77
       app.kubernetes.io/name: kubeshark
       app.kubernetes.io/instance: kubeshark
-      app.kubernetes.io/version: "52.1.75"
+      app.kubernetes.io/version: "52.1.77"
       app.kubernetes.io/managed-by: Helm
   template:
     metadata:
       labels:
         app.kubeshark.co/app: hub
-        helm.sh/chart: kubeshark-52.1.75
+        helm.sh/chart: kubeshark-52.1.77
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.1.75"
+        app.kubernetes.io/version: "52.1.77"
         app.kubernetes.io/managed-by: Helm
     spec:
       dnsPolicy: ClusterFirstWithHostNet
@@ -641,7 +642,7 @@ spec:
                 fieldPath: metadata.namespace
           - name: KUBESHARK_CLOUD_API_URL
             value: 'https://api.kubeshark.co'
-          image: 'docker.io/kubeshark/hub:v52.1.75'
+          image: 'docker.io/kubeshark/hub:v52.1.77'
           imagePullPolicy: Always
           readinessProbe:
             periodSeconds: 1
@@ -689,10 +690,10 @@ kind: Deployment
 metadata:
   labels:
     app.kubeshark.co/app: front
-    helm.sh/chart: kubeshark-52.1.75
+    helm.sh/chart: kubeshark-52.1.77
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.1.75"
+    app.kubernetes.io/version: "52.1.77"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-front
@@ -702,19 +703,19 @@ spec:
   selector:
     matchLabels:
       app.kubeshark.co/app: front
-      helm.sh/chart: kubeshark-52.1.75
+      helm.sh/chart: kubeshark-52.1.77
       app.kubernetes.io/name: kubeshark
       app.kubernetes.io/instance: kubeshark
-      app.kubernetes.io/version: "52.1.75"
+      app.kubernetes.io/version: "52.1.77"
       app.kubernetes.io/managed-by: Helm
   template:
     metadata:
       labels:
         app.kubeshark.co/app: front
-        helm.sh/chart: kubeshark-52.1.75
+        helm.sh/chart: kubeshark-52.1.77
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.1.75"
+        app.kubernetes.io/version: "52.1.77"
         app.kubernetes.io/managed-by: Helm
     spec:
       containers:
@@ -737,7 +738,7 @@ spec:
               value: 'false'
             - name: REACT_APP_RECORDING_DISABLED
               value: 'false'
-          image: 'docker.io/kubeshark/front:v52.1.75'
+          image: 'docker.io/kubeshark/front:v52.1.77'
           imagePullPolicy: Always
           name: kubeshark-front
           livenessProbe:
