:rewind: Bring back the `packet-capture` flag

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -48,6 +48,7 @@ tap:
         memory: 50Mi
   serviceMesh: true
   tls: true
+  packetCapture: best
   ignoreTainted: false
   labels: {}
   annotations: {}
